# nat-server

./: Cargo.toml  README.md  config.toml  course.md  db_v2.sqlite3  hbbr.toml
.claude/: settings.local.json
docs/: configuration.md  socks5-proxy.md  tunnel-guide.md  打洞流程详解.md  端口.md
nat-client/: Cargo.toml  README.md  build.rs  config.toml
nat-client/src/: auth.rs  config.rs  i18n.rs  ipc.rs  kcp_tunnel.rs  main.rs  port_forward.rs  rendezvous_mediator.rs  socks5.rs  updater.rs
nat-client/src/ui/: app.rs  tray.rs
nat-client/ui/: main.slint
src/: api.rs  common.rs  database.rs  hbbr.rs  i18n.rs  lib.rs  main.rs  payment.rs  rendezvous_server.rs  settings_api.rs  web.rs
src/views/: mod.rs
templates/: admin_settings.html  admin_subscriptions.html  dashboard.html  devices.html  forgot_password.html  home.html  layout.html  login.html  monitor.html  register.html  reset_password.html  subscription.html  users.html
