[package]
name = "nat-client"
version = "0.1.0"
edition = "2021"
description = "完整的内网穿透客户端，与 nat-server (hbbs/hbbr) 配合使用（含桌面 GUI）"
authors = ["nat-server contributors"]
build = "build.rs"

[[bin]]
name = "nat-client"
path = "src/main.rs"

# ── Features ──────────────────────────────────────────────────────────────────
# 默认启用 GUI；daemon/server 场景可用 --no-default-features 关闭
[features]
default = ["gui"]
gui = ["dep:slint", "dep:tray-icon", "dep:image", "dep:qrcode", "dep:slint-build"]

[dependencies]
# 核心通信库
core_common = { path = "../libs/core-common" }

# 序列化
serde        = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json   = "1.0"

# 工具
lazy_static  = "1.5"
once_cell    = "1.8"
uuid         = { version = "1.0", features = ["v4"] }
clap         = { version = "4",   features = ["derive"] }
tokio        = { version = "1.0", features = ["full"] }
sodiumoxide  = "0.2"
base64       = "0.22"
whoami       = "1.5"
toml         = "0.7"
rand         = "0.8"
env_logger   = "0.11"
jsonwebtoken = "8"
reqwest      = { version = "0.11", features = ["json", "blocking"] }
open         = "5"
bytemuck     = { version = "1", features = ["derive"] }
icu_provider = { version = "2.2", features = ["logging"] }
chrono       = { version = "0.4", features = ["serde"] }
sha2         = "0.10"

# ── GUI 相关（仅 gui feature 启用时编译）─────────────────────────────────────
slint     = { version = "1.16", default-features = false, features = ["compat-1-2","backend-winit","renderer-femtovg","std"], optional = true }
tray-icon = { version = "0.24", optional = true }
image     = { version = "0.25", default-features = false, features = ["png", "ico"], optional = true }
qrcode    = { version = "0.14", optional = true }

[build-dependencies]
slint-build = { version = "1.16", optional = true }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
